[package]
name = "exchange-server"
version = "0.1.0"
edition = "2021"
authors = ["Arjun Patrawala <hi@arjunpatrawala.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
tokio = { version = "1.31.0", features = ["full"] }
