[package]
name = "exchange-server"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Arjun Patrawala <hi@arjunpatrawala.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
axum = { version = "0.6.20", features = ["headers", "ws"] }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
tokio = { version = "1.32.0", features = ["full"] }
